prusti/tests/pass/parse/forall_verify.stderr
error[E0428]: the name `test2` is defined multiple times
  --> $DIR/forall_verify.rs:20:1
   |
17 | fn test2() {}
   | ---------- previous definition of the value `test2` here
...
20 | fn test2() {}
   | ^^^^^^^^^^ `test2` redefined here
   |
   = note: `test2` must be defined only once in the value namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
